--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- font Awrsome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Boostrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -17,9 +19,8 @@
         <div class="row">
             <div class="col-12">
                 <ul>
-                    <li v-for = "(item, index) in getCompletedItems" class="mb-3 border p-1">
-                        {{ item.text}}
-                    </li>
+                    <li v-for = "(item, index) in todoItem" class="mb-3 border p-1 ">
+                        {{ item.text}} <i @click="toDoRemove(index)" class="ml-2 fas fa-trash-can"></i>
                 </ul>
             </div>
         </div>
