--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
                          <i @click="toDoRemove(index)" class="ml-2 fas fa-trash-can"></i>
                     </li>
                 </ul>
-            </div>
+            <!-- Bottone dinamico per aggiungere elementi alla toDoList -->
+             </div>
+             <div class="form w-100 d-flex justify-content-between">
+                <button class="btn btn-primary ml-5" @click="toDoAdd">Aggiungi</button>
+                <input v-model="newToDoText" class="w-75" type="text" id="txtTodo"  >
+             </div>
         </div>
     </div>
 </body>
