--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
              </div>
              <div class="form w-100 d-flex justify-content-between">
                 <button class="btn btn-primary ml-5" @click="toDoAdd">Aggiungi</button>
-                <input v-model="newToDoText" class="w-75" type="text" id="txtTodo"  >
+                <input v-model="newToDoText" @keyup.enter='toDoAdd()' class="w-75" type="text" id="txtTodo"  >
              </div>
         </div>
     </div>
